Atualização: Trabalho no Senai
Atualização para início dos trabalhos no SENAI

--- a/WorkspaceMavenTeste/teste/src/main/webapp/pages/admin/purchasing/index.html
+++ b/WorkspaceMavenTeste/teste/src/main/webapp/pages/admin/purchasing/index.html
@@ -1,4 +1,4 @@
-<script src="../../js/purchasing.js"></script>
+<script src="purchasing/purchasing.js"></script>
 <h2>Registro de Compras</h2>
 <form name="frmAddCompra" id="addCompra" class="frmInserir">
 	<fieldset>
