--- a/WorkspaceMavenTeste/teste/src/main/webapp/pages/admin/reports/purchases/index.html
+++ b/WorkspaceMavenTeste/teste/src/main/webapp/pages/admin/reports/purchases/index.html
@@ -1,4 +1,4 @@
-<script src="../../js/purchasesReport.js"></script>
+<script src="reports/purchases/purchasesReport.js"></script>
 <h2>Relatório de compras</h2>
 <div id="listaCompras" class="listaRegistros">
 </div>
