Ajustes no ambiente SENAI
Ajustes para preparar o projeto para execução no SENAI

--- a/WorkspaceMavenTeste/teste/src/main/webapp/index.html
+++ b/WorkspaceMavenTeste/teste/src/main/webapp/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<meta name="description" content="Site da Coldigo Geladeiras">
-	<meta name="keywords" content="Geladeiras, Frost-free, Refrigeração">
-	<meta name="author" content="Escola Sistêmica">
+	<meta name="keywords" content="Geladeiras, Frost-free, Refrigeraï¿½ï¿½o">
+	<meta name="author" content="Escola Sistï¿½mica">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Coldigo Geladeiras</title>
 	<link rel="stylesheet" type="text/css" href="addons/css/site.css">
@@ -19,7 +19,7 @@
 			<img src="addons/images/geladeira1.png" alt="Imagem de uma geladeira" class="geladeira esquerda">
 			<div id="titulos"> 
 				<h2>Bem vindo ao site da<br>Coldigo Geladeiras!</h2>
-				<h3>A maior loja de geladeiras da região</h3>
+				<h3>A maior loja de geladeiras da regiÃ£o</h3>
 			</div> 
 			<img src="addons/images/geladeira2.png" alt="Imagem de uma geladeira" class="geladeira direita"> 
 		</div>
